samples/_failures_safe/1761624495_c17bc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe18fa8e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fe18fa8e.c:151:32: error: expected ‘;’ at end of input
  151 |                 token->value[0]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_fe18fa8e.c:151:17: error: expected declaration or statement at end of input
  151 |                 token->value[0]
      |                 ^~~~~
./samples/SAFE/__tmp_fe18fa8e.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe18fa8e.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe18fa8e.c:151:17: error: expected declaration or statement at end of input
